# dev-panel

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  README_CN.md
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
scripts/: setup-hooks.sh
src/: app.rs  event.rs  i18n.rs  main.rs
src/app/: dir_browser.rs  mod.rs  scroll.rs  status.rs  types.rs
src/config/: mod.rs  persistence.rs
src/event/: command.rs  helpers.rs  keyboard.rs  mod.rs  mouse.rs
src/platform/: mod.rs  shell.rs
src/project/: mod.rs  package.rs  scanner.rs
src/pty/: bridge.rs  handle.rs  manager.rs  mod.rs  process_tree.rs  resource.rs
src/ui/: command_palette.rs  confirm_popup.rs  dir_browser.rs  help_popup.rs  input_popup.rs  layout.rs  mod.rs  scrollbar.rs  settings_popup.rs  sidebar.rs  spinner.rs  status_bar.rs  terminal.rs  theme.rs  title_bar.rs
